[project]
name = "toptal-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.1",
    "langgraph>=1.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "openai>=2.37.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.0",
    "uvicorn>=0.47.0",
    "xgboost>=3.2.0",
]
